--- a/index.html
+++ b/index.html
@@ -8,14 +8,165 @@
     <title>хз лол</title>
 </head>
 <body>
-<div class="animation">
-    <div class="shape dark-blue"  style="animation-delay: 0s"></div>
-    <div class="shape red" style="animation-delay: 1s"></div>
-    <div class="shape orange"  style="animation-delay: 1.5s"></div>
-    <div class="shape yellow"  style="animation-delay: 2.5s"></div>
-    <div class="shape green"  style="animation-delay: 4s"></div>
-    <div class="shape blue"  style="animation-delay: 7s"></div>
-    <div class="shape dark-blue"  style="animation-delay: 8.5s"></div>
+<div class="animation fast">
+    <div class="shape" style="background-color: #FF0000; animation-delay: 0.5s"></div>
+    <div class="shape" style="background-color: #FF8000; animation-delay: 1.5s"></div>
+    <div class="shape" style="background-color: #FFFF00; animation-delay: 2.5s"></div>
+    <div class="shape" style="background-color: #80FF00; animation-delay: 3.5s"></div>
+    <div class="shape" style="background-color: #00FF00; animation-delay: 4.5s"></div>
+    <div class="shape" style="background-color: #00FF80; animation-delay: 5.5s"></div>
+    <div class="shape" style="background-color: #00FFFF; animation-delay: 6.5s"></div>
+    <div class="shape" style="background-color: #0080FF; animation-delay: 7.5s"></div>
+    <div class="shape" style="background-color: #0000FF; animation-delay: 8.5s"></div>
+    <div class="shape" style="background-color: #8000FF; animation-delay: 9.5s"></div>
+    <div class="shape" style="background-color: #FF0000; animation-delay: 0.5s"></div>
+    <div class="shape" style="background-color: #FF8000; animation-delay: 1.5s"></div>
+    <div class="shape" style="background-color: #FFFF00; animation-delay: 2.5s"></div>
+    <div class="shape" style="background-color: #80FF00; animation-delay: 3.5s"></div>
+    <div class="shape" style="background-color: #00FF00; animation-delay: 4.5s"></div>
+    <div class="shape" style="background-color: #00FF80; animation-delay: 5.5s"></div>
+    <div class="shape" style="background-color: #00FFFF; animation-delay: 6.5s"></div>
+    <div class="shape" style="background-color: #0080FF; animation-delay: 7.5s"></div>
+    <div class="shape" style="background-color: #0000FF; animation-delay: 8.5s"></div>
+    <div class="shape" style="background-color: #8000FF; animation-delay: 9.5s"></div>
+    <div class="shape" style="background-color: #FF0000; animation-delay: 0.5s"></div>
+    <div class="shape" style="background-color: #FF8000; animation-delay: 1.5s"></div>
+    <div class="shape" style="background-color: #FFFF00; animation-delay: 2.5s"></div>
+    <div class="shape" style="background-color: #80FF00; animation-delay: 3.5s"></div>
+    <div class="shape" style="background-color: #00FF00; animation-delay: 4.5s"></div>
+    <div class="shape" style="background-color: #00FF80; animation-delay: 5.5s"></div>
+    <div class="shape" style="background-color: #00FFFF; animation-delay: 6.5s"></div>
+    <div class="shape" style="background-color: #0080FF; animation-delay: 7.5s"></div>
+    <div class="shape" style="background-color: #0000FF; animation-delay: 8.5s"></div>
+    <div class="shape" style="background-color: #8000FF; animation-delay: 9.5s"></div>
+</div>
+<div class="animation2">
+    <div class="shape" style="background-color: #FF0000; animation-delay: 0s"></div>
+    <div class="shape" style="background-color: #FF8000; animation-delay: 1s"></div>
+    <div class="shape" style="background-color: #FFFF00; animation-delay: 2s"></div>
+    <div class="shape" style="background-color: #80FF00; animation-delay: 3s"></div>
+    <div class="shape" style="background-color: #00FF00; animation-delay: 4s"></div>
+    <div class="shape" style="background-color: #00FF80; animation-delay: 5s"></div>
+    <div class="shape" style="background-color: #00FFFF; animation-delay: 6s"></div>
+    <div class="shape" style="background-color: #0080FF; animation-delay: 7s"></div>
+    <div class="shape" style="background-color: #0000FF; animation-delay: 8s"></div>
+    <div class="shape" style="background-color: #8000FF; animation-delay: 9s"></div>
+    <div class="shape" style="background-color: #FF0000; animation-delay: 0s"></div>
+    <div class="shape" style="background-color: #FF8000; animation-delay: 1s"></div>
+    <div class="shape" style="background-color: #FFFF00; animation-delay: 2s"></div>
+    <div class="shape" style="background-color: #80FF00; animation-delay: 3s"></div>
+    <div class="shape" style="background-color: #00FF00; animation-delay: 4s"></div>
+    <div class="shape" style="background-color: #00FF80; animation-delay: 5s"></div>
+    <div class="shape" style="background-color: #00FFFF; animation-delay: 6s"></div>
+    <div class="shape" style="background-color: #0080FF; animation-delay: 7s"></div>
+    <div class="shape" style="background-color: #0000FF; animation-delay: 8s"></div>
+    <div class="shape" style="background-color: #8000FF; animation-delay: 9s"></div>
+    <div class="shape" style="background-color: #FF0000; animation-delay: 0s"></div>
+    <div class="shape" style="background-color: #FF8000; animation-delay: 1s"></div>
+    <div class="shape" style="background-color: #FFFF00; animation-delay: 2s"></div>
+    <div class="shape" style="background-color: #80FF00; animation-delay: 3s"></div>
+    <div class="shape" style="background-color: #00FF00; animation-delay: 4s"></div>
+    <div class="shape" style="background-color: #00FF80; animation-delay: 5s"></div>
+    <div class="shape" style="background-color: #00FFFF; animation-delay: 6s"></div>
+    <div class="shape" style="background-color: #0080FF; animation-delay: 7s"></div>
+    <div class="shape" style="background-color: #0000FF; animation-delay: 8s"></div>
+    <div class="shape" style="background-color: #8000FF; animation-delay: 9s"></div>
+</div>
+<div class="animation long">
+    <div class="shape" style="background-color: #8000FF; animation-delay: 9.5s"></div>
+    <div class="shape" style="background-color: #0000FF; animation-delay: 8.5s"></div>
+    <div class="shape" style="background-color: #0080FF; animation-delay: 7.5s"></div>
+    <div class="shape" style="background-color: #00FFFF; animation-delay: 6.5s"></div>
+    <div class="shape" style="background-color: #00FF80; animation-delay: 5.5s"></div>
+    <div class="shape" style="background-color: #00FF00; animation-delay: 4.5s"></div>
+    <div class="shape" style="background-color: #80FF00; animation-delay: 3.5s"></div>
+    <div class="shape" style="background-color: #FFFF00; animation-delay: 2.5s"></div>
+    <div class="shape" style="background-color: #FF8000; animation-delay: 1.5s"></div>
+    <div class="shape" style="background-color: #FF0000; animation-delay: 0.5s"></div>
+    <div class="shape" style="background-color: #8000FF; animation-delay: 9.5s"></div>
+    <div class="shape" style="background-color: #0000FF; animation-delay: 8.5s"></div>
+    <div class="shape" style="background-color: #0080FF; animation-delay: 7.5s"></div>
+    <div class="shape" style="background-color: #00FFFF; animation-delay: 6.5s"></div>
+    <div class="shape" style="background-color: #00FF80; animation-delay: 5.5s"></div>
+    <div class="shape" style="background-color: #00FF00; animation-delay: 4.5s"></div>
+    <div class="shape" style="background-color: #80FF00; animation-delay: 3.5s"></div>
+    <div class="shape" style="background-color: #FFFF00; animation-delay: 2.5s"></div>
+    <div class="shape" style="background-color: #FF8000; animation-delay: 1.5s"></div>
+    <div class="shape" style="background-color: #FF0000; animation-delay: 0.5s"></div>
+    <div class="shape" style="background-color: #8000FF; animation-delay: 9.5s"></div>
+    <div class="shape" style="background-color: #0000FF; animation-delay: 8.5s"></div>
+    <div class="shape" style="background-color: #0080FF; animation-delay: 7.5s"></div>
+    <div class="shape" style="background-color: #00FFFF; animation-delay: 6.5s"></div>
+    <div class="shape" style="background-color: #00FF80; animation-delay: 5.5s"></div>
+    <div class="shape" style="background-color: #00FF00; animation-delay: 4.5s"></div>
+    <div class="shape" style="background-color: #80FF00; animation-delay: 3.5s"></div>
+    <div class="shape" style="background-color: #FFFF00; animation-delay: 2.5s"></div>
+    <div class="shape" style="background-color: #FF8000; animation-delay: 1.5s"></div>
+    <div class="shape" style="background-color: #FF0000; animation-delay: 0.5s"></div>
+</div>
+<div class="animation2">
+    <div class="shape" style="background-color: #FF0000; animation-delay: 0s"></div>
+    <div class="shape" style="background-color: #FF8000; animation-delay: 1s"></div>
+    <div class="shape" style="background-color: #FFFF00; animation-delay: 2s"></div>
+    <div class="shape" style="background-color: #80FF00; animation-delay: 3s"></div>
+    <div class="shape" style="background-color: #00FF00; animation-delay: 4s"></div>
+    <div class="shape" style="background-color: #00FF80; animation-delay: 5s"></div>
+    <div class="shape" style="background-color: #00FFFF; animation-delay: 6s"></div>
+    <div class="shape" style="background-color: #0080FF; animation-delay: 7s"></div>
+    <div class="shape" style="background-color: #0000FF; animation-delay: 8s"></div>
+    <div class="shape" style="background-color: #8000FF; animation-delay: 9s"></div>
+    <div class="shape" style="background-color: #FF8000; animation-delay: 0s"></div>
+    <div class="shape" style="background-color: #FFFF00; animation-delay: 1s"></div>
+    <div class="shape" style="background-color: #80FF00; animation-delay: 2s"></div>
+    <div class="shape" style="background-color: #00FF00; animation-delay: 3s"></div>
+    <div class="shape" style="background-color: #00FF80; animation-delay: 4s"></div>
+    <div class="shape" style="background-color: #00FFFF; animation-delay: 5s"></div>
+    <div class="shape" style="background-color: #0080FF; animation-delay: 6s"></div>
+    <div class="shape" style="background-color: #0000FF; animation-delay: 7s"></div>
+    <div class="shape" style="background-color: #8000FF; animation-delay: 8s"></div>
+    <div class="shape" style="background-color: #FF0000; animation-delay: 9s"></div>
+    <div class="shape" style="background-color: #FFFF00; animation-delay: 0s"></div>
+    <div class="shape" style="background-color: #80FF00; animation-delay: 1s"></div>
+    <div class="shape" style="background-color: #00FF00; animation-delay: 2s"></div>
+    <div class="shape" style="background-color: #00FF80; animation-delay: 3s"></div>
+    <div class="shape" style="background-color: #00FFFF; animation-delay: 4s"></div>
+    <div class="shape" style="background-color: #0080FF; animation-delay: 5s"></div>
+    <div class="shape" style="background-color: #0000FF; animation-delay: 6s"></div>
+    <div class="shape" style="background-color: #8000FF; animation-delay: 7s"></div>
+    <div class="shape" style="background-color: #FF0000; animation-delay: 8s"></div>
+    <div class="shape" style="background-color: #FF8000; animation-delay: 9s"></div>
+</div>
+<div class="animation medium">
+    <div class="shape" style="background-color: #FF0000; animation-delay: 0.75s"></div>
+    <div class="shape" style="background-color: #FF8000; animation-delay: 2.25s"></div>
+    <div class="shape" style="background-color: #FFFF00; animation-delay: 3.75s"></div>
+    <div class="shape" style="background-color: #80FF00; animation-delay: 5.25s"></div>
+    <div class="shape" style="background-color: #00FF00; animation-delay: 6.75s"></div>
+    <div class="shape" style="background-color: #00FF80; animation-delay: 8.25s"></div>
+    <div class="shape" style="background-color: #00FFFF; animation-delay: 9.75s"></div>
+    <div class="shape" style="background-color: #0080FF; animation-delay: 11.25s"></div>
+    <div class="shape" style="background-color: #0000FF; animation-delay: 12.75s"></div>
+    <div class="shape" style="background-color: #8000FF; animation-delay: 14.25s"></div>
+    <div class="shape" style="background-color: #FF0000; animation-delay: 0.75s"></div>
+    <div class="shape" style="background-color: #FF8000; animation-delay: 2.25s"></div>
+    <div class="shape" style="background-color: #FFFF00; animation-delay: 3.75s"></div>
+    <div class="shape" style="background-color: #80FF00; animation-delay: 5.25s"></div>
+    <div class="shape" style="background-color: #00FF00; animation-delay: 6.75s"></div>
+    <div class="shape" style="background-color: #00FF80; animation-delay: 8.25s"></div>
+    <div class="shape" style="background-color: #00FFFF; animation-delay: 9.75s"></div>
+    <div class="shape" style="background-color: #0080FF; animation-delay: 11.25s"></div>
+    <div class="shape" style="background-color: #0000FF; animation-delay: 12.75s"></div>
+    <div class="shape" style="background-color: #8000FF; animation-delay: 14.25s"></div>
+    <div class="shape" style="background-color: #FF0000; animation-delay: 0.75s"></div>
+    <div class="shape" style="background-color: #FF8000; animation-delay: 2.25s"></div>
+    <div class="shape" style="background-color: #FFFF00; animation-delay: 3.75s"></div>
+    <div class="shape" style="background-color: #80FF00; animation-delay: 5.25s"></div>
+    <div class="shape" style="background-color: #00FF00; animation-delay: 6.75s"></div>
+    <div class="shape" style="background-color: #00FF80; animation-delay: 8.25s"></div>
+    <div class="shape" style="background-color: #00FFFF; animation-delay: 9.75s"></div>
+    <div class="shape" style="background-color: #0080FF; animation-delay: 11.25s"></div>
+    <div class="shape" style="background-color: #0000FF; animation-delay: 12.75s"></div>
+    <div class="shape" style="background-color: #8000FF; animation-delay: 14.25s"></div>
 </div>
 </body>
 </html>
