--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+    <title>Лавовая лампа</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/style.css">
@@ -169,4 +170,5 @@
     <div class="shape" style="background-color: #8000FF; animation-delay: 14.25s"></div>
 </div>
 </body>
+
 </html>
